Folio Mobile Friendly Complete

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             </a>
         </div>
         <div class="hero-nav-flex-wrapper header" id="myHeader">
+            <div class="nav-empty-div">
+            </div>
             <a href="#home" id="nav-logo">
                 <div class="logo">
                 </div>
@@ -231,11 +233,11 @@
                 <a>
                     <div class="project-overlay">
                         <h3>
-                            Coming Soon... <br>
                             Climate Change Awareness
                         </h3>
                         <p>
-                            A site dedicated to climate change awareness and solutions on peronsal, community and soverign level.
+                            Coming soon... <br>
+                            A site dedicated to climate change awareness and solutions on peronsal, community and soverign levels.
                             <br><br>
                             Node, Express
                         </p>
@@ -246,10 +248,10 @@
                 <a>
                     <div class="project-overlay">
                         <h3>
-                            Coming Soon... <br>
                             Personal Carbon Emissions Calculator
                         </h3>
                         <p>
+                            Coming soon... <br>
                             App to calculate and track carbon emissions of user's lifestyle.
                             <br><br>
                             Ruby On Rails, SQL
@@ -264,6 +266,7 @@
                             F.I.R.E Calculator
                         </h3>
                         <p>
+                            Coming soon... <br>      
                             Webapp that allows users to calculate and plan their finances to reach financial indepedance and retire early (F.I.R.E).
                             <br><br>
                             React
@@ -293,7 +296,7 @@
                 Outside of code, I love to surf, read, drink coffee, eat delicious food (or any food really), play soccer and rugby, and be outdoors.
             </p>
             <div class="about-image-wrapper">
-                <div class="about-image">
+                <div class="about-image" id="cj-surfing-img">
                 </div>
             </div>
         </div>
