--- a/index.html
+++ b/index.html
@@ -14,6 +14,46 @@
 </head>
 
 <body>
+    <div id="mobile-nav" class="navbar">
+            <div class="nav-empty-div">
+            </div>
+            <a href="#home" id="nav-logo">
+                <div class="logo">
+                </div>
+            </a>
+            <div class="nav-empty-div">
+            </div>
+            <input type="checkbox" id="nav-toggle">
+            <label for="nav-toggle" id="burger-menu">
+                <i class="fas fa-bars">
+                </i>
+            </label>
+            <a href="#home" class="menu-selection" id="menu-selection-home">
+                <h3>
+                    Home
+                </h3>
+            </a>
+            <a href="#skills" class="menu-selection">
+                <h3>
+                    Skills
+                </h3>
+            </a>
+            <a href="#folio" class="menu-selection">
+                <h3>
+                    Folio
+                </h3>
+            </a>
+            <a href="#about" class="menu-selection">
+                <h3>
+                    About
+                </h3>
+            </a>
+            <a href="#contact" class="menu-selection">
+                <h3>
+                    Contact
+                </h3>
+            </a>
+        </div>
     <section class="section hero-container" id="home">
         <h1 class="hero-heading">
             Hello, I’m CJ.
@@ -54,7 +94,7 @@
                 </i>
             </a>
         </div>
-        <div class="hero-nav-flex-wrapper header" id="myHeader">
+        <div class="desktop-navbar header navbar" id="myHeader">
             <div class="nav-empty-div">
             </div>
             <a href="#home" id="nav-logo">
@@ -63,11 +103,6 @@
             </a>
             <div class="nav-empty-div">
             </div>
-            <input type="checkbox" id="nav-toggle">
-            <label for="nav-toggle" class="burger-menu">
-                <i class="fas fa-bars">
-                </i>
-            </label>
             <a href="#home" class="menu-selection" id="menu-selection-home">
                 <h3>
                    Home
