--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
                 <i class="fas fa-bars">
                 </i>
             </label>
-            <a href="#home" class="menu-selection" id="menu-selection-home">
+            <a href="#home" class="menu-selection" onclick="toggleHamburger()" id="menu-selection-home">
                 <h3>
                     Home
                 </h3>
             </a>
-            <a href="#skills" class="menu-selection">
+            <a href="#skills" class="menu-selection" onclick="toggleHamburger()">
                 <h3>
                     Skills
                 </h3>
             </a>
-            <a href="#folio" class="menu-selection">
+            <a href="#folio" class="menu-selection" onclick="toggleHamburger()">
                 <h3>
                     Folio
                 </h3>
             </a>
-            <a href="#about" class="menu-selection">
+            <a href="#about" class="menu-selection" onclick="toggleHamburger()">
                 <h3>
                     About
                 </h3>
             </a>
-            <a href="#contact" class="menu-selection">
+            <a href="#contact" class="menu-selection" onclick="toggleHamburger()">
                 <h3>
                     Contact
                 </h3>
