added hero parallax

--- a/index.html
+++ b/index.html
@@ -15,45 +15,45 @@
 
 <body>
     <div id="mobile-nav" class="navbar">
-            <div class="nav-empty-div">
-            </div>
-            <a href="#home" id="nav-logo">
-                <div class="logo">
-                </div>
-            </a>
-            <div class="nav-empty-div">
-            </div>
-            <input type="checkbox" id="nav-toggle">
-            <label for="nav-toggle" id="burger-menu">
-                <i class="fas fa-bars">
-                </i>
-            </label>
-            <a href="#home" class="menu-selection" onclick="toggleHamburger()" id="menu-selection-home">
-                <h3>
-                    Home
-                </h3>
-            </a>
-            <a href="#skills" class="menu-selection" onclick="toggleHamburger()">
-                <h3>
-                    Skills
-                </h3>
-            </a>
-            <a href="#folio" class="menu-selection" onclick="toggleHamburger()">
-                <h3>
-                    Folio
-                </h3>
-            </a>
-            <a href="#about" class="menu-selection" onclick="toggleHamburger()">
-                <h3>
-                    About
-                </h3>
-            </a>
-            <a href="#contact" class="menu-selection" onclick="toggleHamburger()">
-                <h3>
-                    Contact
-                </h3>
-            </a>
+        <div class="nav-empty-div">
         </div>
+        <a href="#home" id="nav-logo">
+            <div class="logo">
+            </div>
+        </a>
+        <div class="nav-empty-div">
+        </div>
+        <input type="checkbox" id="nav-toggle">
+        <label for="nav-toggle" id="burger-menu">
+            <i class="fas fa-bars">
+            </i>
+        </label>
+        <a href="#home" class="menu-selection" onclick="toggleHamburger()" id="menu-selection-home">
+            <h3>
+                Home
+            </h3>
+        </a>
+        <a href="#skills" class="menu-selection" onclick="toggleHamburger()">
+            <h3>
+                Skills
+            </h3>
+        </a>
+        <a href="#folio" class="menu-selection" onclick="toggleHamburger()">
+            <h3>
+                Folio
+            </h3>
+        </a>
+        <a href="#about" class="menu-selection" onclick="toggleHamburger()">
+            <h3>
+                About
+            </h3>
+        </a>
+        <a href="#contact" class="menu-selection" onclick="toggleHamburger()">
+            <h3>
+                Contact
+            </h3>
+        </a>
+    </div>
     <section class="section hero-container" id="home">
         <h1 class="hero-heading">
             Hello, I’m CJ.
@@ -72,7 +72,11 @@
                 Get In Touch
             </button>
         </a>
-        <div class="icon-flex-wrapper" id="hero-icons">
+    </section>
+    <div class="desktop-navbar header navbar" id="myHeader">
+        <div class="nav-empty-div">
+        </div>
+        <div class="icon-flex-wrapper" id="desktop-navbar-icons">
             <a href="https://www.facebook.com/CJStaudinger" target="_blank">
                 <i class="social-media-icon fab fa-facebook">
                 </i>
@@ -94,18 +98,16 @@
                 </i>
             </a>
         </div>
-        <div class="desktop-navbar header navbar" id="myHeader">
-            <div class="nav-empty-div">
+        <a href="#home" id="nav-logo">
+            <div class="logo">
             </div>
-            <a href="#home" id="nav-logo">
-                <div class="logo">
-                </div>
-            </a>
-            <div class="nav-empty-div">
-            </div>
+        </a>
+        <div class="nav-empty-div">
+        </div>
+        <div class="desktop-nav-tabs-wrapper">
             <a href="#home" class="menu-selection" id="menu-selection-home">
                 <h3>
-                   Home
+                    Home
                 </h3>
             </a>
             <a href="#skills" class="menu-selection">
@@ -129,7 +131,7 @@
                 </h3>
             </a>
         </div>
-    </section>
+    </div>
     <section class="section skills-container" id="skills">
         <div class="section-heading">
             <h2 class="section-title skills-title">SKILLS</h2>
