centered social media

--- a/index.html
+++ b/index.html
@@ -72,6 +72,28 @@
                 Get In Touch
             </button>
         </a>
+        <div id="mobile-social-icons">
+            <a href="https://www.facebook.com/CJStaudinger" target="_blank">
+                <i class="social-media-icon fab fa-facebook">
+                </i>
+            </a>
+            <a href="https://www.instagram.com/chris_staudinger/" target="_blank">
+                <i class="social-media-icon fab fa-instagram">
+                </i>
+            </a>
+            <a href="https://www.linkedin.com/in/chrisstaudinger/" target="_blank">
+                <i class="social-media-icon fab fa-linkedin">
+                </i>
+            </a>
+            <a href="https://github.com/chrisstaudinger" target="_blank">
+                <i class="social-media-icon fab fa-github">
+                </i>
+            </a>
+            <a href="https://twitter.com/cj_staudinger/" target="_blank">
+                <i class="social-media-icon fab fa-twitter-square">
+                </i>
+            </a>
+        </div>
     </section>
     <div class="desktop-navbar header navbar" id="myHeader">
         <div class="nav-empty-div">
