minior position change

--- a/index.html
+++ b/index.html
@@ -54,47 +54,45 @@
             </h3>
         </a>
     </div>
-    <section id="home">
-        <div class="hero-container">
-            <h1 class="hero-heading">
-                Hello, I’m CJ.
-                <br>I’m A Full Stack Developer.
-            </h1>
-            <a href="#skills" class="scroll-down-btn-wrapper">
-                <div class="fas fa-chevron-down scroll-down-btn">
-                </div>
-            </a>
-            <a href="#home" id="hero-logo">
-                <div class="logo">
-                </div>
-            </a>
-            <a href="#contact" class="hero-contact-btn">
-                <button class="cta-btn cta-btn-contact">
-                    Get In Touch
-                </button>
-            </a>
-            <div id="mobile-social-icons">
-                <a href="https://www.facebook.com/CJStaudinger" target="_blank">
-                    <i class="social-media-icon fab fa-facebook">
-                    </i>
-                </a>
-                <a href="https://www.instagram.com/chris_staudinger/" target="_blank">
-                    <i class="social-media-icon fab fa-instagram">
-                    </i>
-                </a>
-                <a href="https://www.linkedin.com/in/chrisstaudinger/" target="_blank">
-                    <i class="social-media-icon fab fa-linkedin">
-                    </i>
-                </a>
-                <a href="https://github.com/chrisstaudinger" target="_blank">
-                    <i class="social-media-icon fab fa-github">
-                    </i>
-                </a>
-                <a href="https://twitter.com/cj_staudinger/" target="_blank">
-                    <i class="social-media-icon fab fa-twitter-square">
-                    </i>
-                </a>
+    <section id="home" class="hero-container">
+        <h1 class="hero-heading">
+            Hello, I’m CJ.
+            <br>I’m A Full Stack Developer.
+        </h1>
+        <a href="#skills" class="scroll-down-btn-wrapper">
+            <div class="fas fa-chevron-down scroll-down-btn">
             </div>
+        </a>
+        <a href="#home" id="hero-logo">
+            <div class="logo">
+            </div>
+        </a>
+        <a href="#contact" class="hero-contact-btn">
+            <button class="cta-btn cta-btn-contact">
+                Get In Touch
+            </button>
+        </a>
+        <div id="mobile-social-icons">
+            <a href="https://www.facebook.com/CJStaudinger" target="_blank">
+                <i class="social-media-icon fab fa-facebook">
+                </i>
+            </a>
+            <a href="https://www.instagram.com/chris_staudinger/" target="_blank">
+                <i class="social-media-icon fab fa-instagram">
+                </i>
+            </a>
+            <a href="https://www.linkedin.com/in/chrisstaudinger/" target="_blank">
+                <i class="social-media-icon fab fa-linkedin">
+                </i>
+            </a>
+            <a href="https://github.com/chrisstaudinger" target="_blank">
+                <i class="social-media-icon fab fa-github">
+                </i>
+            </a>
+            <a href="https://twitter.com/cj_staudinger/" target="_blank">
+                <i class="social-media-icon fab fa-twitter-square">
+                </i>
+            </a>
         </div>
     </section>
     <div class="desktop-navbar header navbar" id="myHeader">
